# embedded-cmaker

./: CMakeLists.txt
cmake/: embedded-cmaker.cmake  toolchain-base-gcc.cmake  toolchain-gnu-arm.cmake
src/: asf.h  main.c
src/BL/: helpers.h
src/BL/boards/: board_4d52001a.c  board_4d52001a.h
src/config/: conf_board.h  conf_clocks.h  conf_extint.h
